--- a/examples/logstash.conf
+++ b/examples/logstash.conf
@@ -7,7 +7,7 @@ filter {
     }
     grok {
       ##  %(asctime)s %(levelname)s %(module)s %(name)s PID: %(process)d  %(message)s
-      match => { "message" => "(?m)%{TIMESTAMP_ISO8601:timestamp} %{LOGLEVEL:loglevel} %{NOTSPACE:module} %{NOTSPACE:logger} PID: %{POSINT}  %{GREEDYDATA:pymessage}" }
+      match => { "message" => "(?m)%{TIMESTAMP_ISO8601:pytimestamp} %{LOGLEVEL:loglevel} %{NOTSPACE:module} %{NOTSPACE:logger} PID: %{POSINT}  %{GREEDYDATA:pymessage}" }
       add_field => [ "received_at", "%{@timestamp}" ]
     }
     grok {
